--- a/src/components/todo-comp/todo-comp.component.scss
+++ b/src/components/todo-comp/todo-comp.component.scss
@@ -1,93 +1,91 @@
 @import "src/_var.scss";
 
 .todo {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: $clr-sec;
-    border: $clr-prime 2px solid;
-    border-radius: 1rem;
-    margin: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: $clr-sec;
+  border: $clr-prime 2px solid;
+  border-radius: 1rem;
+  margin: 1rem;
 }
 
 .finish {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.3rem;
 }
 
 .round {
-    position: relative;
-  }
-  
-  .round label {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 50%;
-    cursor: pointer;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 2rem;
-    height: 2rem;
-  }
-  
-  .round label:after {
-    border: 2px solid #fff;
-    border-top: none;
-    border-right: none;
-    content: "";
-    height: 6px;
-    left: 0.3rem;
-    opacity: 0;
-    position: absolute;
-    top: 0.5rem;
-    transform: rotate(-45deg);
-    width: 12px;
-  }
-  
-  .round input[type="checkbox"] {
-    visibility: hidden;
-  }
-  
-  .round input[type="checkbox"]:checked + label {
-    background-color: #66bb6a;
-    border-color: #66bb6a;
-  }
-  
-  .round input[type="checkbox"]:checked + label:after {
-    opacity: 1;
-  }
-  
-  
+  position: relative;
+}
+
+.round label {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 2rem;
+  height: 2rem;
+}
+
+.round label:after {
+  border: 2px solid #fff;
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 6px;
+  left: 0.3rem;
+  opacity: 0;
+  position: absolute;
+  top: 0.5rem;
+  transform: rotate(-45deg);
+  width: 12px;
+}
+
+.round input {
+  visibility: hidden;
+}
+
+.round input:checked + label {
+  background-color: #66bb6a;
+  border-color: #66bb6a;
+}
+
+.round input:checked + label:after {
+  opacity: 1;
+}
 
 .details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 1rem 0;
+  width: 100%;
+  padding-left: 1rem;
+  .date {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    margin: 1rem 0;
-    width: 100%;
-    padding-left: 1rem;
-    .date {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        p {
-            margin: 0;
-            font-size: 1.5rem;
-        }
+    justify-content: flex-start;
+    p {
+      margin: 0;
+      font-size: 1.5rem;
     }
-    h3 {
-        margin: 0;
-        font-size: 2rem;
-    }
+  }
+  h3 {
+    margin: 0;
+    font-size: 2rem;
+  }
 }
 
 .delete {
-    background-color: $clr-danger;
-    border: none;
-    width: 10%;
-    font-size: 4rem;
-    border-radius: 0 1rem 1rem 0;
+  background-color: $clr-danger;
+  border: none;
+  width: 10%;
+  font-size: 4rem;
+  border-radius: 0 1rem 1rem 0;
 }
