--- a/src/components/todo-comp/todo-comp.component.html
+++ b/src/components/todo-comp/todo-comp.component.html
@@ -9,7 +9,7 @@
       <h3>{{ todo.title }}</h3>
       <div class="date">
         <p>Erstellt: {{ todo.start }}</p>
-        <p>Deadline: {{ todo.deadline }}</p>
+        <p *ngIf="todo.deadline != 'NaN:NaN:aN NaN:NaN'">Deadline: {{ todo.deadline }}</p>
       </div>
     </div>
     <button class="delete" (click)="handleDelete($event)">X</button>
