--- a/src/components/todo-form/todo-form.component.html
+++ b/src/components/todo-form/todo-form.component.html
@@ -1,7 +1,18 @@
 <div class="add-todo">
-    <label for="title">Titel</label>
-    <input id="title" type="text" [(ngModel)]="todoTitle" />
-    <label for="deadline">Deadline</label>
-    <input type="datetime-local" [(ngModel)]="todoDeadline" />
-    <button (click)="addTodo($event)">Hinzufügen</button>
+  <label for="title">Titel</label>
+  <input
+    id="title"
+    type="text"
+    [ngClass]="{ error: creationError }"
+    [(ngModel)]="todoTitle"
+  />
+  <label for="deadline">Deadline</label>
+  <input type="datetime-local" [(ngModel)]="todoDeadline" />
+  <button
+    (click)="addTodo($event)"
+    [ngClass]="{ clicked: clickedAdd }"
+    [disabled]="clickedAdd"
+  >
+    Hinzufügen
+  </button>
 </div>
