--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "src/_var.scss";
+
 * {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10px;
@@ -6,4 +8,5 @@
 body {
   padding: 0;
   margin: 0;
+  background-color: $clr-sec;
 }
