Removed log der 2.

--- a/src/components/todo-form/todo-form.component.html
+++ b/src/components/todo-form/todo-form.component.html
@@ -1,5 +1,5 @@
 <div class="add-todo">
-  <label for="title">Titel</label>
+  <label for="title">Titel*</label>
   <input
     id="title"
     type="text"
