--- a/src/components/index/index.component.html
+++ b/src/components/index/index.component.html
@@ -1,6 +1,4 @@
-<div class="header">
-    <h1 class="title">Todo's</h1>
-</div>
+<app-header></app-header>
 <div class="add-todo">
   <app-todo-form
     (newTodo)="createTodo($event)"
@@ -10,7 +8,9 @@
 </div>
 <div>
   <div>
-    <h2 class="title" (click)="handleToDoToggle()">Offene Todos <span>({{ getOpenTodos().length }})</span></h2>
+    <h2 class="title" (click)="handleToDoToggle()">
+      Offene Todos <span>({{ getOpenTodos().length }})</span>
+    </h2>
   </div>
   <div *ngIf="showToDos" class="todo-list">
     <app-todo-comp
