--- a/src/components/todo-comp/todo-comp.component.scss
+++ b/src/components/todo-comp/todo-comp.component.scss
@@ -65,9 +65,10 @@
   flex-direction: column;
   justify-content: space-around;
   margin: 1rem 0;
+  margin-right: 3rem;
   width: 100%;
   padding-left: 1rem;
-  max-width: calc(80% - 5rem);
+  max-width: calc(80% - 8rem);
   .date {
     display: flex;
     flex-direction: column;
@@ -77,6 +78,7 @@
       font-size: 1.5rem;
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
   h3 {
