--- a/src/components/todo-form/todo-form.component.html
+++ b/src/components/todo-form/todo-form.component.html
@@ -7,7 +7,7 @@
     [(ngModel)]="todoTitle"
   />
   <label for="deadline">Deadline</label>
-  <input type="datetime-local" [(ngModel)]="todoDeadline" />
+  <input id="deadline" type="datetime-local" [(ngModel)]="todoDeadline" />
   <button
     (click)="addTodo($event)"
     [ngClass]="{ clicked: clickedAdd }"
