--- a/src/components/todo-comp/todo-comp.component.scss
+++ b/src/components/todo-comp/todo-comp.component.scss
@@ -1,4 +1,4 @@
-@import "src/_var.scss";
+@import 'src/_var.scss';
 
 .todo {
   display: flex;
@@ -37,7 +37,7 @@
   border: 2px solid #fff;
   border-top: none;
   border-right: none;
-  content: "";
+  content: '';
   height: 6px;
   left: 0.3rem;
   opacity: 0;
