--- a/src/components/todo-form/todo-form.component.html
+++ b/src/components/todo-form/todo-form.component.html
@@ -2,7 +2,7 @@
   <label for="title">Titel*</label>
   <input id="title" type="text" [ngClass]="{ error: creationError }" [(ngModel)]="todoTitle" />
   <label for="deadline">Deadline</label>
-  <input id="deadline" type="datetime-local" [(ngModel)]="todoDeadline" />
+  <input id="deadline" type="datetime-local" [min]="dateNow" [(ngModel)]="todoDeadline" />
   <button (click)="addTodo($event)" [ngClass]="{ clicked: clickedAdd }" [disabled]="clickedAdd">
     Hinzufügen
   </button>
