--- a/src/components/todo-comp/todo-comp.component.scss
+++ b/src/components/todo-comp/todo-comp.component.scss
@@ -81,6 +81,32 @@
       white-space: nowrap;
     }
   }
+  div.desc {
+    padding: 0;
+    p {
+      margin: 0;
+      font-size: 1.5rem;
+    }
+    p.desc {
+      padding: 1.3rem;
+      font-size: 1.3rem;
+      max-height: 10rem;
+      overflow: scroll;
+      text-overflow: ellipsis;
+      border: darken($clr-sec, 30%) solid 1px;
+      border-radius: 0.2rem;
+    }
+    p.desc::-webkit-scrollbar {
+      width: 0rem;
+    }
+  }
+  div.head {
+    display: flex;
+    img {
+      margin-left: 1rem;
+      height: 2rem;
+    }
+  }
   h3 {
     margin: 0;
     font-size: 2rem;
