--- a/src/components/update-comp/update-comp.component.html
+++ b/src/components/update-comp/update-comp.component.html
@@ -8,8 +8,11 @@
   <input type="datetime-local" [value]="todo.deadlineVal" [(ngModel)]="todoDeadline" />
 </div>
 <div>
-  <label>Beschreibung</label>
-  <textarea [value]="todo.description" [(ngModel)]="todoDescription"></textarea>
+  <div>
+    <label>Beschreibung <br><span>(max. 150Zeichen)</span></label>
+    <textarea (ngModelChange)="updateChars($event)" [value]="todo.description" [(ngModel)]="todoDescription" maxlength="150"></textarea>
+  </div>
+  <span class="limit">{{ descChars }}/150</span>
 </div>
 <div>
   <button [disabled]="onUpdate" (click)="update()" class="save">Speichern</button>
