--- a/src/components/index/index.component.scss
+++ b/src/components/index/index.component.scss
@@ -1,4 +1,4 @@
-@import 'src/_var.scss';
+@import "src/_var.scss";
 
 h1.title {
   font-size: 4rem;
@@ -19,7 +19,6 @@ h2.title {
     height: 2rem;
   }
 }
-
 
 .collapse__btn {
   position: absolute;
